...
            "value" : "Allgemein"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "General"
          }
        }
      }
    },
    "CategoryHealth" : {
      "extractionState" : "manual",
...
